fix mobile spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -59,7 +59,7 @@ a:hover, a:focus {
 
 @media (min-width: 768px) {
   .container {
-    width:90%;
+    width:93%;
   }
 }
 
